Correctly generates short parshios

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node-rest-client": "^3.1.0"
   },
   "scripts": {
-    "start": "node index.js"
+    "start": "node section_creator.js",
+    "generate_short": "node section_creator.js"
   }
 }
